Named the Java 25 runtime of the installers and the native-access flag for library users
Release 8.0.0 builds its installers with JDK 25 and grants the runnable
jars native access in their manifest, so that Java 24 and newer start
them without the FlatLaf JEP 472 warning. The installation page and the
manual introduction said "bundled Java runtime" without the version; the
Maven section had no Java note at all, and it is the one route where the
manifest grant does not reach: an application that starts the Simulator
from the class path needs the flag itself.